feat: Update tailwindcss and add

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
@@ -24,4 +21,25 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --default-font-family: Roboto, sans-serif;
+
+  --color-primary-50: #eefbfd;
+  --color-primary-100: #d5f3f8;
+  --color-primary-200: #afe8f2;
+  --color-primary-300: #78d5e8;
+  --color-primary-400: #58c4dc;
+  --color-primary-500: #1e9dbc;
+  --color-primary-600: #1c7f9e;
+  --color-primary-700: #1d6681;
+  --color-primary-800: #20546a;
+  --color-primary-900: #1f475a;
+  --color-primary-950: #0f2e3d;
+
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
 }
