fix: Adds croll padding top

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,10 @@
   --foreground: #ededed;
 }
 
+html {
+  scroll-padding-top: 80px;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
